@@ -19,4 +19,6 @@ New class for FKML estimates - as well as class starship
 
 Change examples in qgl
 
+Replace with public page /rking/SLD/SLD.html
+
 Complete plot.gldgpdfit
